kubernetes/kubernetes-network/assets/manifests/web-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - nodePort: 30300
      protocol: TCP
      port: 80
      targetPort: 8080
